--- a/presentation.adoc
+++ b/presentation.adoc
@@ -1,6 +1,6 @@
 = Modern CI/CD
 Марат Радченко <https://github.com/slonopotamus[@slonopotamus]>
-v1.0, 2021-07-27
+v1.0, 2021-08-03
 :source-highlighter: highlightjs
 :revealjs_hash: true
 :revealjs_theme: league
@@ -9,5 +9,122 @@ v1.0, 2021-07-27
 :imagesdir: images
 
 **{revdate}**
+
+== Поколения CI
+
+. Jenkins (2005), Teamcity (2006)
+. AppVeyor (2011), Travis CI (2011), GitLab CI (2015)
+. CircleCI (2017), GitHub Actions (2018)
+
+=== 1: Jenkins, Teamcity
+
+* Настройка через UI
+* Installation-wide админские права
+* Непереносимость
+* Билды на хост-системе
+
+=== 2: AppVeyor, Travis CI, GitLab CI
+
+* Дискавери репозиториев
+* Configuration as a code
+* Права на уровне репозиториев/проектов
+* Виртуализированные агенты
+
+=== 3: CircleCI, GitHub Actions
+
+* Всё что есть во втором поколении
+* Локальный запуск билдов
+* Actions/Orbs: реюзабельные куски билд-пайплайна
+
+== Actions
+
+[source,yaml]
+----
+steps:
+- uses: actions/checkout@v2
+- uses: ruby/setup-ruby@v1
+  with:
+    ruby-version: 2.6
+- run: bundle exec rake
+----
+
+* Экшены в отдельных репозиториях
+* Inputs
+* Выполняются в изолированном окружении
+* Orbs: 2700+
+* Actions: over 9000
+
+=== Кейс: отправить сообщение в Slack
+
+* Jenkins: установить плагин (через рестарт, конечно)
+* GitLab CI: врукопашную дёргать HTTP API
+* GitHub Actions:
+[source,yaml]
+----
+- uses: slackapi/slack-github-action@v1.14.0
+  with:
+    channel-id: 'CHANNEL_ID'
+    slack-message: 'hello!'
+----
+
+=== Кейс: clang-format
+
+* Jenkins: 😐
+* GitLab CI: 😐
+* GitHub Actions:
+[source,yaml]
+----
+steps:
+- uses: actions/checkout@v2
+- uses: DoozyX/clang-format-lint-action@v0.12
+  with:
+    source: '.'
+    exclude: './lib'
+    clangFormatVersion: 12
+----
+
+== Контейнеры, виртуалки
+
+* Билд-агенты *одинаковые*
+* Отмена билдов
+* Установка софта
+* Autoscaling
+* MacOS? Ну да, ну да, пошел я нахер
+
+== Continuous Deployment
+
+* Kubernetes, Nomad
+* Возможность динамически *создавать и удалять* тестовые стенды
+* Интеграция с мерж-реквестами
+
+image::gitlab_environments.png[]
+
+== Bonus: Windows Containers
+
+image::win_in_win.png[]
+
+Положил Windows в Windows, чтобы запускать Windows пока я запускаю Windows
+
+=== Изоляция
+
+* Process
+* Hyper-V
+
+=== Совместимость
+
+* Ядро, API
+* Windows Server vs Desktop
+* Windows 10 21H1
+* Windows 11
+
+=== Жизненный цикл
+
+* LTSC
+* SAC
+
+=== Размер
+
+* `mcr.microsoft.com/windows/servercore`: 5.7GB
+* `mcr.microsoft.com/windows`: 15GB
 
 == The End
